Removed warnings about deprecated methods that are simple to remove